# coisando-coisas

./: .gitignore  Cargo.toml  diesel.toml
migrations/2025-01-06-204103_create_users/: down.sql  up.sql
migrations/2025-01-06-204402_create_listings/: down.sql  up.sql
src/: lib.rs  main.rs
src/pages/: auth.rs  components.rs  index.rs  info.rs  mod.rs  submit.rs
